--- a/.htaccess
+++ b/.htaccess
@@ -2,11 +2,13 @@ Options +FollowSymLinks
 IndexIgnore */*
 RewriteEngine on
 
-# if request dosn't start with web add it
 RewriteCond %{REQUEST_URI} !^/(web)
+RewriteRule ^assets/(.*)$ /web/assets/$1 [L]
+RewriteRule ^css/(.*)$ web/css/$1 [L]
+RewriteRule ^js/(.*)$ web/js/$1 [L]
+RewriteRule ^images/(.*)$ web/images/$1 [L]
 RewriteRule (.*) /web/$1
 
-# if file or directory dosn't exists go to /web/index.php
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule . /web/index.php
